Time display no longer creates horizontal scrolling issue.

--- a/app/assets/stylesheets/screenshot_slider.css.scss
+++ b/app/assets/stylesheets/screenshot_slider.css.scss
@@ -3,7 +3,7 @@
   height: 100%;
   margin-left: 20px;
   position: absolute;
-  width: 80%;
+  width: 60%;
 }
 
 .slider-container {
