--- a/app/assets/stylesheets/time_display.css.scss
+++ b/app/assets/stylesheets/time_display.css.scss
@@ -9,7 +9,7 @@ $td-transition: opacity 500ms ease-out 0.5s;
   left: 0%;
   margin-top: -1.5em;
   opacity: 0;
-  padding: 0.5em;
+  padding: 0.5em 0;
   pointer-events: none;
   position: absolute;
   text-align: center;
